Fix card image border radius

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
   <main>
     <article class="card">
-      <div class="card__image">
-        <img src="./assets/images/illustration-article.svg" alt="Blog Image" class="blog__image">
+      <div>
+        <img class="card__image"src="./assets/images/illustration-article.svg" alt="Blog Image" class="blog__image">
       </div>
 
       <div class="card__content">
